[gd_scene load_steps=6 format=3 uid="uid://pef57kr0vo1e"]

[ext_resource type="Script" uid="uid://1dfndp15vxmy" path="res://scripts/player/player.gd" id="1_3m52r"]
[ext_resource type="Texture2D" uid="uid://bfq2yqv1h304n" path="res://resources/graphics/player/player.png" id="1_rggrj"]
[ext_resource type="Script" uid="uid://bfuuhdvq3cbx3" path="res://scenes/player_action.gd" id="2_028os"]
[ext_resource type="Script" uid="uid://dw5ihuihhltp3" path="res://scripts/player/player_movement.gd" id="2_fdfyx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5pofk"]
radius = 27.721827

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3m52r")

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource("2_fdfyx")

[node name="PlayerAction" type="Node" parent="."]
script = ExtResource("2_028os")

[node name="PrimaryTimer" type="Timer" parent="PlayerAction"]
wait_time = 0.5
one_shot = true

[node name="SecondaryTimer" type="Timer" parent="PlayerAction"]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.345, 2.345)
shape = SubResource("CircleShape2D_5pofk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -38)
texture = ExtResource("1_rggrj")

[node name="FirePoint" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(20, -133)

[node name="Marker2D" type="Marker2D" parent="FirePoint"]

[node name="Marker2D2" type="Marker2D" parent="FirePoint"]
position = Vector2(11, 5)

[node name="Marker2D3" type="Marker2D" parent="FirePoint"]
position = Vector2(-11, 5)

[connection signal="timeout" from="PlayerAction/PrimaryTimer" to="PlayerAction" method="_on_primary_timer_timeout"]
[connection signal="timeout" from="PlayerAction/SecondaryTimer" to="PlayerAction" method="_on_secondary_timer_timeout"]
